--- a/package.json
+++ b/package.json
@@ -1,24 +1,12 @@
 {
-  "name": "registration-form",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "bcrypt": "^5.1.1",
+    "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.7.2",
-    "nodemailer": "^6.9.15"
+    "ngrok": "^5.0.0-beta.2",
+    "twilio": "^5.3.2"
+  },
+  "devDependencies": {
+    "vite-plugin-rewrite-all": "^1.0.2"
   }
 }
